// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PricePreview ci credit card render ci 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main pricePreview ci"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-h4 StyledProps--padding-bottom-large"
    >
      platform.authSettings.pricePreview.title
    </p>
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--padding-bottom-large"
    >
      <p
        class="StyledProps--font StyledProps--main"
      >
        common.billed
      </p>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline StyledProps--flex-justifyContent-start"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          common.monthly
        </p>
        <label
          class="Toggle--toggle paymentFrequency StyledProps--main"
          data-testid="toggle"
        >
          <input
            checked=""
            class="Toggle--input"
            disabled=""
            type="checkbox"
            value=""
          />
          <span
            class="Toggle--toggleIcon"
          />
          
        </label>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main selected"
          >
            common.yearly
          </p>
          <p
            class="StyledProps--font StyledProps--main selected"
          >
            platform.authSettings.pricePreview.discount
          </p>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-bottom-large"
    >
      <p
        class="StyledProps--font StyledProps--main"
      >
        common.subscriptions.overview.details
      </p>
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-bold"
      >
        Team common.subscriptions.overview.plan
      </p>
      <div
        class="Layout--vertical StyledProps--main line StyledProps--padding-top-small StyledProps--padding-bottom-small"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--padding-bottom-small"
        >
          <p
            class="StyledProps--font StyledProps--main"
          >
            200  common.subscriptions.usage.developers/month
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold"
          >
            $0.00
            common.perMonth
          </p>
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-start"
        >
          <p
            class="StyledProps--font StyledProps--main"
          >
            200  common.subscriptions.usage.developers/year
          </p>
          0
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main line StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--padding-top-small StyledProps--padding-bottom-small"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          platform.authSettings.costCalculator.premiumSupport
        </p>
        <p
          class="StyledProps--font StyledProps--main"
        >
          platform.authSettings.pricePreview.calculatedNextStep
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main line StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--padding-top-small StyledProps--padding-bottom-small"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          platform.authSettings.costCalculator.tax
        </p>
        <p
          class="StyledProps--font StyledProps--main"
        >
          $1,000.00
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main line StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--padding-top-small StyledProps--padding-bottom-small"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          total
        </p>
        <p
          class="StyledProps--font StyledProps--main"
        >
          $1,000.00
        </p>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="Layout--horizontal StyledProps--main footerStyleCi StyledProps--flex StyledProps--flex-justifyContent-space-between"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h2"
        >
          common.payNow
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h2"
        >
          $1,000.00
          common.perYear
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall"
        >
          platform.authSettings.autoRenewal
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`PricePreview render 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main pricePreview cf"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-h4 StyledProps--padding-bottom-large"
    >
      platform.authSettings.pricePreview.title
    </p>
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--padding-bottom-large"
    >
      <p
        class="StyledProps--font StyledProps--main"
      >
        common.billed
      </p>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline StyledProps--flex-justifyContent-start"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          common.monthly
        </p>
        <label
          class="Toggle--toggle paymentFrequency StyledProps--main"
          data-testid="toggle"
        >
          <input
            checked=""
            class="Toggle--input"
            disabled=""
            type="checkbox"
            value=""
          />
          <span
            class="Toggle--toggleIcon"
          />
          
        </label>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main selected"
          >
            common.yearly
          </p>
          <p
            class="StyledProps--font StyledProps--main selected"
          >
            platform.authSettings.pricePreview.discount
          </p>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-bottom-large"
    >
      <p
        class="StyledProps--font StyledProps--main"
      >
        common.subscriptions.overview.details
      </p>
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-bold"
      >
        Team common.subscriptions.overview.plan
      </p>
      <div
        class="Layout--vertical StyledProps--main line StyledProps--padding-top-small StyledProps--padding-bottom-small"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--padding-bottom-small"
        >
          <p
            class="StyledProps--font StyledProps--main"
          >
            25  common.subscriptions.usage.developers/month
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold"
          >
            $0.00
            common.perMonth
          </p>
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-start"
        >
          <p
            class="StyledProps--font StyledProps--main"
          >
            25  common.subscriptions.usage.developers/year
          </p>
          0
        </div>
      </div>
      <div
        class="Layout--vertical StyledProps--main line StyledProps--padding-top-small StyledProps--padding-bottom-small"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--padding-bottom-small"
        >
          <div
            class="Layout--vertical StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              12K platform.authSettings.costCalculator.maus/month
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall"
            />
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold"
          >
            $0.00
            common.perMonth
          </p>
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-start"
        >
          <div
            class="Layout--vertical StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              12K platform.authSettings.costCalculator.maus/year
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall"
            />
          </div>
          0
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main line StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--padding-top-small StyledProps--padding-bottom-small"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          platform.authSettings.costCalculator.premiumSupport
        </p>
        <p
          class="StyledProps--font StyledProps--main"
        >
          platform.authSettings.pricePreview.calculatedNextStep
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main line StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--padding-top-small StyledProps--padding-bottom-small"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          platform.authSettings.costCalculator.tax
        </p>
        <p
          class="StyledProps--font StyledProps--main"
        >
          $1,000.00
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main line StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--padding-top-small StyledProps--padding-bottom-small"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          total
        </p>
        <p
          class="StyledProps--font StyledProps--main"
        >
          $1,000.00
        </p>
      </div>
    </div>
  </div>
</div>
`;
